Correct vertical table alignment in admin tables for tall rows
When a select2 widget is inserted for a m2m list_editable the alignment of text in all the cells is clearly offset incorrectly sticking to the top of the cell.  Simply modifying the text's default vertical-alignment to middle fixes this.

--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -226,7 +226,7 @@ td, th {
     font-size: 13px;
     line-height: 16px;
     border-bottom: 1px solid #eee;
-    vertical-align: top;
+    vertical-align: middle;
     padding: 8px;
 }
 
